c/src/test/resources/c/mini_bnc/invalid/divide.c
int divide(int a, int b) {
  a = 3/b;
  ASSERT(a == 1);
  return a;
}
